# rust-opencv-cam-demo

./: Cargo.toml  LICENSE  Makefile.toml  README  env.sh
opencv-related-helpers/: build-wrapper.sh  mac-build.sh
src/: main.rs
