[package]
name = "cannycam"
version = "0.1.0"
authors = ["Jason Stelzer <mental@neverlight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

opencv = {version = "0.49", default-features = false, features = ["opencv-4", "buildtime-bindgen"]}
num-traits = "0.2"
num-derive = "0.2"