[package]
name = "cannycam"
version = "0.1.0"
authors = ["Jason Stelzer <mental@neverlight.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
opencv = {version = "0.94.4", features = ["clang-runtime"] }
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
